# sparta

./: .gitignore  BUILD.md  BUILD_CMAKE.md  CMakeLists.txt  README  README-dev.md  README.ALCF  README.md  README_HKM.txt  plan_swpm.md
cmake/: CMakeLists.txt  check_for_sparta_build_artifacts.sh  make_style.sh
cmake/Modules/: FindFFTW2.cmake  FindFFTW3.cmake  FindMKL.cmake
cmake/common/: sparta_options.cmake
cmake/machine_files/: mac.cmake
cmake/presets/: astra_kokkos.cmake  chama.cmake  chama_big.cmake  chama_mpich.cmake  elcapitan_kokkos.cmake  kokkos_common.cmake  kokkos_cuda.cmake  kokkos_hip.cmake  kokkos_mpi_only.cmake  kokkos_omp.cmake  kokkos_phi.cmake  kokkos_sycl.cmake  mac.cmake  mac_mpi.cmake  mpi.cmake  mpi_big.cmake  mpi_debug.cmake  openmpi.cmake  serial.cmake  serial_debug.cmake  summit_kokkos.cmake  vortex_kokkos.cmake
examples/: CMakeLists.txt  README  data.big.tri  data.cone  data.cube  data.sphere  data.square  data.tet  in.2d  in.2d.surf  in.3d.surf  in.test1
examples/1D-shock/: co2.species.vib  in.flowfile  std_flow.0  std_flow.1000  std_flow.10000  std_flow.11000  std_flow.12000  std_flow.13000  std_flow.14000  std_flow.15000  std_flow.16000  std_flow.17000  std_flow.2000  std_flow.3000  std_flow.4000  std_flow.5000  std_flow.6000  std_flow.7000  std_flow.8000  std_flow.9000  venus.tce  venus.vss
examples/O-recombination/: in.mix  venus.species  venus.tce
examples/ablation/: CMakeLists.txt  FAILING.in.ablation.3d.reactions  README  binary.101x101  binary.21x21x21  data.etch2d  fibers-101x101x101.binary  in.ablation.2d  in.ablation.3d  in.ablation.3d.reactions  in.ablation.multi.inner.3d  log.04Apr23.mpi_1.ablation.2d  log.04Apr23.mpi_1.ablation.3d  log.04Apr23.mpi_4.ablation.2d  log.04Apr23.mpi_4.ablation.3d  log.05Apr23.mpi_1.ablation.2d  log.05Apr23.mpi_1.ablation.3d  log.05Apr23.mpi_4.ablation.2d  log.05Apr23.mpi_4.ablation.3d  log.11Sep23.mpi_1.ablation.2d  log.11Sep23.mpi_1.ablation.3d  log.11Sep23.mpi_4.ablation.2d  log.11Sep23.mpi_4.ablation.3d  log.12Nov24.mpi_1.ablation.multi.inner.3d  log.12Nov24.mpi_4.ablation.multi.inner.3d  log.14Nov24.mpi_1.ablation.multi.inner.3d  log.14Nov24.mpi_4.ablation.multi.inner.3d  log.24Aug20.mpi_1.ablation.2d  log.24Aug20.mpi_1.ablation.3d  log.24Aug20.mpi_4.ablation.2d  log.24Aug20.mpi_4.ablation.3d  log.29Jun21.mpi_1.ablation.2d  log.29Jun21.mpi_1.ablation.3d  log.29Jun21.mpi_4.ablation.2d  log.29Jun21.mpi_4.ablation.3d  log.7Feb24.mpi_1.ablation.2d  log.7Feb24.mpi_1.ablation.3d  log.7Feb24.mpi_4.ablation.2d  log.7Feb24.mpi_4.ablation.3d  log.ablation.2d.8Oct19.g++.1  (+5 more)
examples/ablation_distributed/: data.box  data.cone2d  data.cut_box  data.oetch2d  data.rectangle2d  data.ridge2d  data.ridge3d  data.spherocylinder.2d  in.ablate_distributed.cone.2d  in.ablate_distributed.cutbox.3d  in.ablate_distributed.etch.2d  in.ablate_distributed.fiber.3d  in.ablate_distributed.rect.2d  in.ablate_distributed.ridges.3d  in.ablate_distributed.sphere.3d  in.ablate_distributed.sphero.2d  in.couette
examples/adapt/: CMakeLists.txt  in.adapt.rotate  in.adapt.slide  in.adapt.static  in.adapt.static.paraview  log.04Apr23.mpi_1.adapt.rotate  log.04Apr23.mpi_1.adapt.slide  log.04Apr23.mpi_1.adapt.static  log.04Apr23.mpi_4.adapt.rotate  log.04Apr23.mpi_4.adapt.slide  log.04Apr23.mpi_4.adapt.static  log.05Apr23.mpi_1.adapt.rotate  log.05Apr23.mpi_1.adapt.slide  log.05Apr23.mpi_1.adapt.static  log.05Apr23.mpi_4.adapt.rotate  log.05Apr23.mpi_4.adapt.slide  log.05Apr23.mpi_4.adapt.static  log.11Sep23.mpi_1.adapt.rotate  log.11Sep23.mpi_1.adapt.slide  log.11Sep23.mpi_1.adapt.static  log.11Sep23.mpi_4.adapt.rotate  log.11Sep23.mpi_4.adapt.slide  log.11Sep23.mpi_4.adapt.static  log.24Aug20.mpi_1.adapt.rotate  log.24Aug20.mpi_1.adapt.slide  log.24Aug20.mpi_1.adapt.static  log.24Aug20.mpi_4.adapt.rotate  log.24Aug20.mpi_4.adapt.slide  log.24Aug20.mpi_4.adapt.static  log.29Jun21.mpi_1.adapt.rotate  log.29Jun21.mpi_1.adapt.slide  log.29Jun21.mpi_1.adapt.static  log.29Jun21.mpi_4.adapt.rotate  log.29Jun21.mpi_4.adapt.slide  log.29Jun21.mpi_4.adapt.static  log.adapt.rotate.21Aug15.g++.1  log.adapt.rotate.21Aug15.g++.4  log.adapt.rotate.22Sep15.g++.1  log.adapt.rotate.22Sep15.g++.4  log.adapt.slide.21Aug15.g++.1  (+7 more)
examples/adjust_temp/: circle.surf  dump.12Jul22.mpi_1.circle.adjust  dump.12Jul22.mpi_1.sphere.adjust  dump.12Jul22.mpi_1.sphere.constant  dump.12Jul22.mpi_4.circle.adjust  dump.12Jul22.mpi_4.circle.constant  dump.12Jul22.mpi_4.sphere.adjust  dump.12Jul22.mpi_4.sphere.constant  dump.circle.adjust.1  dump.circle.adjust.4  dump.circle.constant.1  dump.circle.constant.4  in.circle.adjust  in.circle.adjust_temp  in.circle.constant  in.circle.constant_temp  in.sphere.adjust  in.sphere.adjust_temp  in.sphere.adjust_temp.distributed  in.sphere.constant  in.sphere.constant_temp  in.sphere.constant_temp.distributed  log.04Apr23.mpi_1.circle.adjust  log.04Apr23.mpi_1.circle.constant  log.04Apr23.mpi_1.sphere.adjust  log.04Apr23.mpi_1.sphere.constant  log.04Apr23.mpi_4.circle.adjust  log.04Apr23.mpi_4.circle.constant  log.04Apr23.mpi_4.sphere.adjust  log.04Apr23.mpi_4.sphere.constant  log.05Apr23.mpi_1.circle.adjust  log.05Apr23.mpi_1.circle.constant  log.05Apr23.mpi_1.sphere.adjust  log.05Apr23.mpi_1.sphere.constant  log.05Apr23.mpi_4.circle.adjust  log.05Apr23.mpi_4.circle.constant  log.05Apr23.mpi_4.sphere.adjust  (+32 more)
src/: .gitignore  CMakeLists.txt  Depend.sh  Install.sh  Make.sh  Makefile  Makefile.lib  Makefile.list  Makefile.package.empty  Makefile.package.settings.empty  Makefile.shlib  Package.sh  Purge.list  README_FOR_VARIABLE_TIME_STEPPING  accelerator_kokkos.h  accelerator_kokkos_defs.h  adapt_grid.cpp  adapt_grid.h  balance_grid.cpp  balance_grid.h  collide.cpp  collide.h  collide_reduce.cpp  collide_swpm.cpp  collide_vss.cpp  collide_vss.h  comm.cpp  comm.h  compute.cpp  compute.h  compute_boundary.cpp  compute_boundary.h  compute_collide_tally.cpp  compute_collide_tally.h  compute_collision_tally.cpp  compute_collision_tally.h  compute_count.cpp  compute_count.h  compute_distsurf_grid.cpp  compute_distsurf_grid.h  (+410 more)
(+2112 files in other folders)
